--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -1,6 +1,6 @@
 #playbook is list of plays, always it should start with -(hypen)
 - name: ping the node
-  host: node1
+  hosts: node1
   # this is list of tasks/modules/collections
   tasks:
   - name: pinging the server
