--- a/06-task-level-variables.yaml
+++ b/06-task-level-variables.yaml
@@ -7,7 +7,7 @@
   tasks:
   - name: inheretance and printing task-level variables
     vars:
-      land: "5 hectors"
+    - land: "5 hectors"
       money: "5000$"
       level: "task-level" 
     ansible.builtin.debug:
