--- a/11-conditions.yaml
+++ b/11-conditions.yaml
@@ -16,6 +16,7 @@
   
   - name: create user roboshop
     when: output.rc != 0 # if the expression is true then only the module will run
+    become: yes
     ansible.builtin.user:
       name: roboshop
 
